--- a/resources/ui/aboutus.ui
+++ b/resources/ui/aboutus.ui
@@ -24,7 +24,7 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Microsoft YaHei UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;img src=&quot;:/resources/MUSE_LOGO2.svg&quot; /&gt;&lt;/p&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;img src=&quot;:/png/MUSE.png&quot; /&gt;&lt;/p&gt;
 &lt;p align=&quot;justify&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;MUSE is an open-access land change simulation software designed for urban expansion, utilizing cellular automata modeling. It employs multiple patch generation engines to simulate urban development processes at different scales, from cell to patch level, mirroring real-world mechanisms. The software incorporates a variety of parameters and operators to manage multilevel urban morphologies.&lt;/p&gt;
 &lt;p align=&quot;justify&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;At the landscape level, MUSE regulates urban development occurrence using Gaussian functions, shaping macro-level spatiotemporal morphology based on the regularity of physical urban expansion. It considers the Euclidean distance from newly developed urban patches to the nearest city centers, influencing the aggregated or sprawled nature of urban landscapes.&lt;/p&gt;
 &lt;p align=&quot;justify&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;At the class level, MUSE manipulates inter-patch spatial connectivity by categorizing new urban patches into organic and spontaneous types. This approach controls the spatiotemporal morphology (contiguous and fragmented) of the urban land class at a meso-level, introducing regularity in the oscillation between diffusion and coalescence phases in urban expansion processes.&lt;/p&gt;
@@ -79,7 +79,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
   </layout>
  </widget>
  <resources>
-  <include location="res.qrc"/>
+  <include location="../qrc/res.qrc"/>
  </resources>
  <connections/>
 </ui>
