--- a/resources/ui/UDSA.ui
+++ b/resources/ui/UDSA.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Urban Development Suitability Assessment (UDSA) module</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
@@ -266,20 +266,58 @@
                       <widget class="QComboBox" name="comboBox_03">
                        <property name="minimumSize">
                         <size>
-                         <width>0</width>
+                         <width>138</width>
                          <height>25</height>
                         </size>
                        </property>
                        <property name="currentText">
-                        <string/>
+                        <string>XGBoost</string>
+                       </property>
+                       <item>
+                        <property name="text">
+                         <string>XGBoost</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>Random Forest</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>SVM</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>MLP</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>Naive Bayes</string>
+                        </property>
+                       </item>
+                       <item>
+                        <property name="text">
+                         <string>Logistic Regression</string>
+                        </property>
+                       </item>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QLineEdit" name="lineEdit_03_random_samples">
+                       <property name="placeholderText">
+                        <string>Number of random samples</string>
                        </property>
                       </widget>
                      </item>
                      <item>
-                      <widget class="QLineEdit" name="lineEdit_03_random_samples"/>
-                     </item>
-                     <item>
-                      <widget class="QLineEdit" name="lineEdit_03_sample_ratio"/>
+                      <widget class="QLineEdit" name="lineEdit_03_sample_ratio">
+                       <property name="text">
+                        <string/>
+                       </property>
+                      </widget>
                      </item>
                     </layout>
                    </widget>
@@ -380,7 +418,11 @@
                    <item>
                     <layout class="QHBoxLayout" name="horizontalLayout_5">
                      <item>
-                      <widget class="QLineEdit" name="lineEdit_03_save"/>
+                      <widget class="QLineEdit" name="lineEdit_03_save">
+                       <property name="placeholderText">
+                        <string>Enter save path for training data (csv or txt)</string>
+                       </property>
+                      </widget>
                      </item>
                      <item>
                       <widget class="QToolButton" name="toolButton_03_save">
@@ -557,7 +599,14 @@
                  <number>9</number>
                 </property>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit_05_save_path"/>
+                 <widget class="QLineEdit" name="lineEdit_05_save_path">
+                  <property name="text">
+                   <string/>
+                  </property>
+                  <property name="placeholderText">
+                   <string>Enter save path for prediction results (tif or tiff)</string>
+                  </property>
+                 </widget>
                 </item>
                 <item>
                  <widget class="QToolButton" name="button_05_save">
@@ -591,6 +640,12 @@
       </layout>
      </widget>
      <widget class="MyTextBrowser" name="textBrowser_06_output">
+      <property name="minimumSize">
+       <size>
+        <width>138</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
@@ -606,6 +661,9 @@ li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Microsoft YaHei UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="placeholderText">
+       <string>Run Information Output...</string>
       </property>
      </widget>
     </widget>
